finished options for products and orders, fix index on mobile, update on shipping info

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -636,6 +636,8 @@ input[type=number]::-webkit-outer-spin-button {
     padding-top: 0;
   }
   .item-info {
+    white-space: pre-wrap;
+    word-break: keep-all;
     text-align: justify;
     font-size: 1em;
   }
